--- a/Proxmox/proxmox_sv.po
+++ b/Proxmox/proxmox_sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: proxmox translations\n"
 "Report-Msgid-Bugs-To: <support@proxmox.com>\n"
 "POT-Creation-Date: 2025-06-04 19:10+0200\n"
-"PO-Revision-Date: 2025-07-08 08:47+0200\n"
+"PO-Revision-Date: 2025-07-14 12:49+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish\n"
 "Language: sv\n"
@@ -1290,7 +1290,7 @@ msgstr "Bläddra"
 #: pve-manager/www/manager6/dc/MetricServerView.js:287
 #: proxmox-backup/www/window/InfluxDbEdit.js:64
 msgid "Bucket"
-msgstr "Skopa"
+msgstr "Bucket"
 
 #: pmg-gui/js/ClamAVDatabase.js:88
 msgid "Build time"
@@ -9536,7 +9536,7 @@ msgstr "Kräver ‘{0}’-privilegier"
 #: proxmox-backup/www/window/Settings.js:180
 #: proxmox-backup/www/window/Settings.js:278
 msgid "Reset"
-msgstr "Återställ"
+msgstr "Starta om"
 
 #: pmg-gui/js/Settings.js:181 pve-manager/www/manager6/window/Settings.js:245
 #: proxmox-backup/www/window/Settings.js:181
@@ -9553,7 +9553,7 @@ msgstr "Återställ regeldatabasen till fabriksinställningarna?"
 
 #: pve-manager/www/manager6/qemu/Config.js:202
 msgid "Reset {0} immediately"
-msgstr "Återställ {0} omedelbart"
+msgstr "Starta om {0} omedelbart"
 
 #: pve-manager/www/manager6/Utils.js:2068
 #: pve-manager/www/manager6/lxc/Resources.js:289
