--- a/Inkscape/Tutorials/tutorial-advanced.po
+++ b/Inkscape/Tutorials/tutorial-advanced.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Inkscape tutorial advanced Swedish\n"
 "POT-Creation-Date: 2023-07-14 16:46+0200\n"
-"PO-Revision-Date: 2025-06-29 15:18+0200\n"
+"PO-Revision-Date: 2025-07-27 08:42+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv\n"
@@ -83,7 +83,7 @@ msgstr ""
 "muspekaren befinner sig utanför fönstret, i mitten av dokumentfönstret. "
 "Objekten i urklippet minns dock fortfarande den ursprungliga platsen från "
 "vilken de kopierades, och du kan klistra in dem där igen med "
-"<guimenuitem>Klistra in</guimenuitem> på plats (<keycombo><keycap "
+"<guimenuitem>Klistra in på plats</guimenuitem> (<keycombo><keycap "
 "function=\"control\">Ctrl</keycap><keycap function=\"alt\">Alt</"
 "keycap><keycap>V</keycap></keycombo>)."
 
@@ -139,15 +139,15 @@ msgstr ""
 "<menuchoice><guimenu>Redigera</guimenu><guisubmenu>Klistra in..</"
 "guisubmenu><guimenuitem>Storlek</guimenuitem></menuchoice> skalar hela "
 "markeringen så att den matchar den totala storleken på urklippsobjekten. "
-"<guimenuitem>Bredd/Höjd</guimenuitem> skalar hela urvalet horisontellt/"
-"vertikalt så att det matchar bredden/höjden på urklippsobjekten. Dessa "
-"kommandon respekterar skalförhållandelåset på Väljare-verktygets kontrollfältet "
-"(mellan B- och H-fälten), så att när detta lås trycks in skalas den andra "
-"dimensionen av det markerade objektet i samma proportion; annars är den andra "
-"dimensionen oförändrad. De kommandon som innehåller \"Separat\" fungerar på "
-"samma sätt som de ovan beskrivna kommandona, förutom att de skalar varje "
-"markerat objekt separat så att det matchar storleken/bredden/höjden på "
-"urklippsobjekten."
+"<guimenuitem>Bredd</guimenuitem>/<guimenuitem>Höjd</guimenuitem> skalar hela "
+"urvalet horisontellt/vertikalt så att det matchar bredden/höjden på "
+"urklippsobjekten. Dessa kommandon respekterar skalförhållandelåset på Väljare-"
+"verktygets kontrollfältet (mellan B- och H-fälten), så att när detta lås trycks "
+"in skalas den andra dimensionen av det markerade objektet i samma proportion; "
+"annars är den andra dimensionen oförändrad. De kommandon som innehåller "
+"\"Separat\" fungerar på samma sätt som de ovan beskrivna kommandona, förutom "
+"att de skalar varje markerat objekt separat så att det matchar storleken/"
+"bredden/höjden på urklippsobjekten."
 
 #. (itstool) path: sect1/para
 #: tutorial-advanced.xml:57
@@ -163,7 +163,7 @@ msgstr ""
 #. (itstool) path: sect1/title
 #: tutorial-advanced.xml:63
 msgid "Drawing freehand and regular paths"
-msgstr "Ritning på fri hand och regelbundna slingor"
+msgstr "Ritning på fri hand och vanliga slingor"
 
 #. (itstool) path: sect1/para
 #: tutorial-advanced.xml:64
@@ -172,15 +172,15 @@ msgid ""
 "(freehand) tool (<keycap>P</keycap>):"
 msgstr ""
 "Det enklaste sättet att skapa en godtycklig form är att rita den med hjälp av "
-"verktyget Blyertspenna (frihand)<keycap>(P):</keycap>:"
+"verktyget Blyertspenna (frihand) (<keycap>P</keycap>):"
 
 #. (itstool) path: sect1/para
 #: tutorial-advanced.xml:75
 msgid ""
 "If you want more regular shapes, use the Pen (Bezier) tool (<keycap>B</keycap>):"
 msgstr ""
-"Om du vill ha mer vanliga former kan du använda verktyget Penna "
-"(Bezier)<keycap>(B):</keycap>:"
+"Om du vill ha mer vanliga former kan du använda verktyget Penna (Bezier) "
+"(<keycap>B</keycap>):"
 
 #. (itstool) path: sect1/para
 #: tutorial-advanced.xml:85
@@ -246,8 +246,8 @@ msgstr ""
 "Inkscape-objekt, kan ha godtyckliga fyllnings- och streckegenskaper. Men till "
 "skillnad från en form kan en slinga redigeras genom att fritt dra i någon av "
 "dess noder (inte bara fördefinierade handtag) eller genom att direkt dra i ett "
-"segment av slingan. Markera den här slingan och växla till "
-"nodverktyget<keycap>(N):</keycap>:"
+"segment av slingan. Markera den här slingan och växla till nodverktyget "
+"(<keycap>N</keycap>):"
 
 #. (itstool) path: sect1/para
 #: tutorial-advanced.xml:118
@@ -271,17 +271,17 @@ msgstr ""
 "slingan. Dessa noder kan <firstterm>väljas</firstterm> genom att <mousebutton "
 "role=\"click\">klicka</mousebutton>, <keycombo><keycap "
 "function=\"shift\">Skift</keycap><mousebutton role=\"click\">klick</"
-"mousebutton></keycombo>eller genom att <mousebutton role=\"mouse-drag\">dra</"
+"mousebutton></keycombo> eller genom att <mousebutton role=\"mouse-drag\">dra</"
 "mousebutton> ett gummiband - precis som objekt markeras med Väljare-verktyget "
-"(inklusive det mycket liknande sättet att använda <keycap function=\"alt\">Alt-"
-"tangenten</keycap> för att <mousebutton role=\"mouse-drag\">dra</mousebutton> "
-"runt de noder du vill markera). Du kan också klicka på ett slingsegment för att "
-"automatiskt välja de intilliggande noderna. Markerade noder blir markerade och "
-"visar sina <firstterm>nodhandtag</firstterm> - en eller två små cirklar som är "
-"kopplade till varje markerad nod med raka linjer. Med tangenten <keycap>!</"
-"keycap> inverteras nodvalet i den aktuella underslingan (dvs. underslingor med "
-"minst en markerad nod); <keycombo><keycap function=\"alt\">Alt</keycap><keycap>!"
-"</keycap></keycombo> inverterar i hela slingan."
+"(inklusive det mycket liknande sättet att använda <keycap function=\"alt\">Alt</"
+"keycap>-tangenten för att dra runt de noder du vill markera). Du kan också "
+"klicka på ett slingsegment för att automatiskt välja de intilliggande noderna. "
+"Markerade noder blir framhävda och visar sina <firstterm>nodhandtag</firstterm> "
+"- en eller två små cirklar som är kopplade till varje markerad nod med raka "
+"linjer. Med tangenten <keycap>!</keycap> inverteras nodvalet i den aktuella "
+"underslingan (dvs. underslingor med minst en markerad nod); <keycombo><keycap "
+"function=\"alt\">Alt</keycap><keycap>!</keycap></keycombo> inverterar i hela "
+"slingan."
 
 #. (itstool) path: sect1/para
 #: tutorial-advanced.xml:130
@@ -298,18 +298,18 @@ msgid ""
 "function=\"alt\">Alt</keycap><mousebutton role=\"click\">click</mousebutton></"
 "keycombo> at the desired location."
 msgstr ""
-"Slingor redigeras genom att <mousebutton role=\"mouse-drag\">dra</"
-"mousebutton>deras noder, nodhandtag eller genom att direkt dra ett "
-"slingsegment. (Försök att dra några noder, handtag och slingsegment i "
-"ovanstående slinga.) <keycap function=\"control\">Ctrl</keycap> fungerar som "
-"vanligt för att begränsa rörelse och rotation. <keycap>Piltangenterna</keycap>, "
-"<keycap>Tabb,</keycap> <keycap>[</keycap>, <keycap>]</keycap> <keycap>, &lt;,</"
-"keycap> <keycap>&gt;</keycap> och deras modifierare fungerar precis som i "
-"Väljare, men gäller noder i stället för objekt. Du kan lägga till noder var som "
-"helst på en slinga genom att antingen dubbelklicka eller genom att trycka på "
-"<keycombo><keycap function=\"control\">Ctrl</keycap><keycap "
-"function=\"alt\">Alt</keycap><mousebutton role=\"click\">klicka</mousebutton></"
-"keycombo> på önskad plats."
+"Slingor redigeras genom att <mousebutton role=\"mouse-drag\">dra</mousebutton> "
+"deras noder, nodhandtag eller genom att direkt dra ett slingsegment. (Försök "
+"att dra några noder, handtag och slingsegment i ovanstående slinga.) <keycap "
+"function=\"control\">Ctrl</keycap> fungerar som vanligt för att begränsa "
+"rörelse och rotation. <keycap>Piltangenterna</keycap>, <keycap>Tabb</keycap>, "
+"<keycap>[</keycap>, <keycap>]</keycap> <keycap>, &lt;</keycap>, <keycap>&gt;</"
+"keycap> och deras modifierare fungerar precis som i väljaren, men gäller noder "
+"i stället för objekt. Du kan lägga till noder var som helst på en slinga genom "
+"att antingen dubbelklicka eller genom att trycka på <keycombo><keycap "
+"function=\"control\">Ctrl</keycap><keycap function=\"alt\">Alt</"
+"keycap><mousebutton role=\"click\">klicka</mousebutton></keycombo> på önskad "
+"plats."
 
 #. (itstool) path: sect1/para
 #: tutorial-advanced.xml:140
@@ -388,13 +388,13 @@ msgid ""
 "keycap><mousebutton role=\"mouse-drag\">drag</mousebutton></keycombo> away from "
 "the node."
 msgstr ""
-"Du kan också <firstterm>dra tillbaka</firstterm> en nods handtag helt och "
-"hållet genom att <keycombo><keycap function=\"control\">Ctrl</"
-"keycap><mousebutton role=\"click\">klicka</mousebutton></keycombo>på den. Om "
-"två intilliggande noder har sina handtag indragna är slingsegmentet mellan dem "
-"en rak linje. För att dra ut den indragna noden, <keycombo><keycap "
-"function=\"shift\">Skift</keycap><mousebutton role=\"mouse-drag\">dra</"
-"mousebutton></keycombo> bort från noden."
+"Du kan också <firstterm>dra in</firstterm> en nods handtag helt och hållet "
+"genom att <keycombo><keycap function=\"control\">Ctrl</keycap><mousebutton "
+"role=\"click\">klicka</mousebutton></keycombo> på det. Om två intilliggande "
+"noder har sina handtag indragna är slingsegmentet mellan dem en rak linje. För "
+"att dra ut den indragna noden, <keycombo><keycap function=\"shift\">Skift</"
+"keycap><mousebutton role=\"mouse-drag\">dra</mousebutton></keycombo> bort från "
+"noden."
 
 #. (itstool) path: sect1/title
 #: tutorial-advanced.xml:174
@@ -445,7 +445,7 @@ msgid ""
 "stroke, a new compound path gets the style of the first (lowest in z-order) "
 "object being combined."
 msgstr ""
-"Inkscape kan <guimenuitem>kombinera</guimenuitem> slingor till en sammansatt "
+"Inkscape kan <guimenuitem>Kombinera</guimenuitem> slingor till en sammansatt "
 "slinga (<keycombo><keycap function=\"control\">Ctrl</keycap><keycap>K</keycap></"
 "keycombo>) och <guimenuitem>bryta isär</guimenuitem> en sammansatt slinga i "
 "separata slingor (<keycombo><keycap function=\"control\">Ctrl</keycap><keycap "
@@ -493,8 +493,8 @@ msgid ""
 "are two stars - the left one is kept a shape and the right one is converted to "
 "path. Switch to node tool and compare their editability when selected:"
 msgstr ""
-"Alla form- eller textobjekt kan <firstterm>konverteras</firstterm> till en "
-"slinga (<keycombo><keycap function=\"shift\">Skift</keycap><keycap "
+"Alla form- eller textobjekt kan <firstterm>konverteras till slinga</firstterm> "
+"(<keycombo><keycap function=\"shift\">Skift</keycap><keycap "
 "function=\"control\">Ctrl</keycap><keycap>C</keycap></keycombo>). Denna "
 "operation ändrar inte objektets utseende men tar bort alla funktioner som är "
 "specifika för dess typ (t.ex. kan du inte runda hörnen på en rektangel eller "
@@ -564,7 +564,7 @@ msgstr ""
 "att <guimenuitem>Exklusion</guimenuitem> lägger till extra noder där de "
 "ursprungliga slingorna korsar varandra. Skillnaden mellan "
 "<guimenuitem>Division</guimenuitem> och <guimenuitem>Klipp slinga</guimenuitem> "
-"är att det förra klipper hela det nedre objektet efter det övre objektets "
+"är att det första klipper hela det nedre objektet efter det övre objektets "
 "slinga, medan det senare bara klipper det nedre objektets streck och tar bort "
 "all fyllning (detta är praktiskt för att klippa fyllningslösa streck i bitar)."
 
@@ -581,7 +581,7 @@ msgid ""
 "guimenuitem> will remove every part of each overlapping path that is not "
 "visible, because it is covered by another path in the selection."
 msgstr ""
-"För vissa vanliga användningsfall innehåller <guimenu>Slinga</guimenu>-menyn "
+"För vissa vanliga användningsfall innehåller menyn <guimenu>Slinga</guimenu> "
 "också några kommandon som kombinerar flera grundläggande booleska operationer "
 "till en, för att spara lite tid - och dessutom behåller de objektens färg och "
 "stil, till skillnad från de grundläggande operationerna: <guimenuitem>Dela "
@@ -595,7 +595,7 @@ msgstr ""
 #. (itstool) path: sect1/title
 #: tutorial-advanced.xml:289
 msgid "Shape Builder tool"
-msgstr "Formbyggare"
+msgstr "Formbyggarverktyget"
 
 #. (itstool) path: sect1/para
 #: tutorial-advanced.xml:290
@@ -604,7 +604,7 @@ msgid ""
 "<firstterm>Shape Builder tool</firstterm> (<keycap>X</keycap>) can be used."
 msgstr ""
 "För att bygga upp nya former från flera slingor enbart med hjälp av musen kan "
-"verktyget <firstterm>Formbyggare</firstterm><keycap>(X)</keycap> användas."
+"verktyget <firstterm>Formbyggare</firstterm> (<keycap>X</keycap>) användas."
 
 #. (itstool) path: sect1/para
 #: tutorial-advanced.xml:294
@@ -846,9 +846,9 @@ msgid ""
 "situations, it may be more convenient than editing it right on the canvas (in "
 "particular, that tab supports as-you-type spell checking)."
 msgstr ""
-"Att skapa ett textobjekt är så enkelt som att byta till "
-"textverktyget<keycap>(T)</keycap>, klicka någonstans i dokumentet och skriva in "
-"texten. Om du vill ändra typsnittsfamilj, stil, storlek och justering öppnar du "
+"Att skapa ett textobjekt är så enkelt som att byta till textverktyget "
+"(<keycap>T</keycap>), klicka någonstans i dokumentet och skriva in texten. Om "
+"du vill ändra typsnittsfamilj, stil, storlek och justering öppnar du "
 "dialogrutan Text och typsnitt (<keycombo><keycap function=\"shift\">Skift</"
 "keycap><keycap function=\"control\">Ctrl</keycap><keycap>T</keycap></"
 "keycombo>). Dialogrutan har också en flik för textinmatning där du kan redigera "
@@ -986,7 +986,7 @@ msgstr ""
 "<keycombo><keycap function=\"control\">Ctrl</keycap><keycap "
 "function=\"alt\">Alt</keycap><keycap>&gt;</keycap></keycombo> på ett stycke i "
 "den här handledningen för att flytta in eller ut det så att den totala höjden "
-"på textobjektet ändras med 1 pixel vid den aktuella zoomen. Precis som i "
+"på textobjektet ändras med 1 bildpunkt vid den aktuella zoomen. Precis som i "
 "Väljare ger ett tryck på <keycap function=\"shift\">Skift</keycap> tillsammans "
 "med en genväg för avstånd eller kerning 10 gånger större effekt än utan Skift."
 
