--- a/Inkscape/Tutorials/tutorial-tips.po
+++ b/Inkscape/Tutorials/tutorial-tips.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Inkscape tutorial tips Swedish\n"
 "POT-Creation-Date: 2023-11-01 13:46+0100\n"
-"PO-Revision-Date: 2025-07-01 10:04+0200\n"
+"PO-Revision-Date: 2025-07-27 11:44+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv\n"
@@ -79,15 +79,15 @@ msgid ""
 "with one row and multiple columns. For example, here's a pattern made out of a "
 "horizontal line, with 30 columns, each column rotated 6 degrees:"
 msgstr ""
-"Välj P1-symmetri (enkel översättning) och <emphasis>kompensera</emphasis> sedan "
-"för den översättningen genom att gå till fliken <guimenuitem>Skift</guimenuitem> "
-"och ställa in <guilabel>Per rad / Förskjutning Y</guilabel> och <guilabel>Per "
-"kolumn / Förskjutning X</guilabel> båda till -100%. Nu kommer alla kloner att "
-"staplas exakt ovanpå originalet. Allt som återstår att göra är att gå till "
-"fliken <guimenuitem>Rotation</guimenuitem> och ställa in en viss rotationsvinkel "
-"per kolumn och sedan skapa mönstret med en rad och flera kolumner. Här är t.ex. "
-"ett mönster som består av en horisontell linje med 30 kolumner, där varje kolumn "
-"roteras 6 grader:"
+"Välj P1-symmetri (enkel translation) och <emphasis>kompensera</emphasis> sedan "
+"för den translationen genom att gå till fliken <guimenuitem>Förskjut</"
+"guimenuitem> och ställa in <guilabel>Per rad / Förskjutning Y</guilabel> och "
+"<guilabel>Per kolumn / Förskjutning X</guilabel> båda till -100%. Nu kommer alla "
+"kloner att staplas exakt ovanpå originalet. Allt som återstår att göra är att gå "
+"till fliken <guimenuitem>Rotation</guimenuitem> och ställa in en viss "
+"rotationsvinkel per kolumn och sedan skapa mönstret med en rad och flera "
+"kolumner. Här är t.ex. ett mönster som består av en horisontell linje med 30 "
+"kolumner, där varje kolumn roteras 6 grader:"
 
 #. (itstool) path: sect1/para
 #: tutorial-tips.xml:43
@@ -149,7 +149,7 @@ msgid ""
 "by <firstterm>multistop</firstterm> gradients."
 msgstr ""
 "Version 1.1 av SVG stöder inte icke-linjära gradienter (dvs. de som har en icke-"
-"linjär översättning mellan färger). Du kan dock emulera dem genom "
+"linjära translationer mellan färger). Du kan dock emulera dem genom "
 "<firstterm>gradienter för flera stopp</firstterm>."
 
 #. (itstool) path: sect1/para
@@ -200,7 +200,7 @@ msgid ""
 msgstr ""
 "Radiella gradienter behöver inte vara symmetriska. I Gradientverktyget drar du "
 "det centrala handtaget för en elliptisk gradient med <keycap "
-"function=\"shift\">Skift.</keycap> Detta flyttar det x-formade "
+"function=\"shift\">Skift</keycap>. Detta flyttar det x-formade "
 "<firstterm>fokushandtaget</firstterm> för gradienten bort från dess centrum. När "
 "du inte behöver det kan du fästa tillbaka fokus genom att dra det nära mitten."
 
@@ -293,7 +293,7 @@ msgid ""
 "Also, Inkscape usually supports more SVG features than are accessible from the "
 "GUI. The XML editor is one way to get access to these features (if you know SVG)."
 msgstr ""
-"XML-redigeraren (<keycombo><keycap function=\"shift\">Skift</keycap><keycap "
+"Med XML-redigeraren (<keycombo><keycap function=\"shift\">Skift</keycap><keycap "
 "function=\"control\">Ctrl</keycap><keycap>X</keycap></keycombo>) kan du ändra "
 "nästan alla aspekter av dokumentet utan att använda en extern textredigerare. "
 "Dessutom stöder Inkscape vanligtvis fler SVG-funktioner än vad som är "
@@ -440,8 +440,8 @@ msgstr ""
 "Unicode- och normalläge. I Unicode-läget blir varje grupp av 4 hexadecimala "
 "siffror som du skriver ett enda Unicode-tecken, vilket gör att du kan skriva in "
 "godtyckliga symboler (så länge du känner till deras Unicode-kodpunkter och "
-"teckensnittet stöder dem). Tryck på <keycap>Enter</keycap> för att avsluta "
-"Unicode-inmatningen. Så här gör du till exempel <keycombo action=\"seq\"><keycap "
+"typsnittet stöder dem). Tryck på <keycap>Enter</keycap> för att avsluta Unicode-"
+"inmatningen. Så här gör du till exempel <keycombo action=\"seq\"><keycap "
 "function=\"control\">Ctrl</keycap><keycap>U</keycap><keycap>2</keycap><keycap>0</"
 "keycap><keycap>1</keycap><keycap>4</keycap><keycap>Ange</keycap></keycombo> "
 "infogar ett em-dash (—). Om du vill avsluta Unicode-läget utan att infoga något "
@@ -477,10 +477,10 @@ msgstr ""
 "Anta att du vill skapa en ikon på 24x24 bildpunkter. Skapa en 24x24 px duk "
 "(använd <guimenuitem>Dokumentinställningar</guimenuitem>) och ställ in rutnätet "
 "på 0,5 px (48x48 rutnätslinjer). Om du nu anpassar fyllda objekt till "
-"<emphasis>jämna</emphasis> rutnät och streckade objekt till <emphasis>udda</"
-"emphasis> rutnät med en streckbredd i px som är ett jämnt tal, och exporterar "
-"den med standardvärdet 96 dpi (så att 1 px blir 1 rasterbildsbildpunkt), får du "
-"en skarp rasterbild utan onödig kantutjämning."
+"<emphasis>jämna</emphasis> rutnätslinjer och streckade objekt till "
+"<emphasis>udda</emphasis> rutnätslinjer med en streckbredd i px som är ett jämnt "
+"tal, och exporterar den med standardvärdet 96 dpi (så att 1 px blir 1 "
+"rasterbildsbildpunkt), får du en skarp rasterbild utan onödig kantutjämning."
 
 #. (itstool) path: sect1/title
 #: tutorial-tips.xml:252
@@ -538,10 +538,10 @@ msgid ""
 "handles for on canvas alignment. The handles can be used to align the selected "
 "objects relative to the area of the current selection."
 msgstr ""
-"När alternativet <guilabel>Aktivera justering på duken</guilabel> är aktivt i "
+"När alternativet <guilabel>Aktivera justering på skärmen</guilabel> är aktivt i "
 "dialogrutan <guimenuitem>Justera och distribuera</guimenuitem>, markerar du "
 "några objekt och <mousebutton role=\"click\">klickar</mousebutton> långsamt två "
-"gånger på dem för att aktivera handtag för justering på duken. Handtagen kan "
+"gånger på dem för att aktivera handtag för justering på skärmen. Handtagen kan "
 "användas för att justera de markerade objekten i förhållande till området för "
 "den aktuella markeringen."
 
@@ -605,7 +605,7 @@ msgid ""
 "Stroke dialog and change Blur value to, say, 5.0. That's it!"
 msgstr ""
 "Du kan också enkelt skapa oskarpa släppskuggor för objekt manuellt med oskärpa i "
-"dialogen Fill and Stroke. Markera ett objekt, duplicera det genom att "
+"dialogen Fyllning och streck. Markera ett objekt, duplicera det genom att "
 "<keycombo><keycap function=\"control\">Ctrl</keycap><keycap>D</keycap></"
 "keycombo>och tryck på <keycap>PgDown</keycap> för att placera det under "
 "originalobjektet, placera det lite till höger och lägre än originalobjektet. "
@@ -637,7 +637,7 @@ msgstr ""
 #. (itstool) path: sect1/title
 #: tutorial-tips.xml:323
 msgid "Selecting the original"
-msgstr "Välja original"
+msgstr "Välj originalet"
 
 #. (itstool) path: sect1/para
 #: tutorial-tips.xml:324
@@ -651,8 +651,8 @@ msgid ""
 "to the corresponding path, offset source, or clone original."
 msgstr ""
 "När du har en text på slinga, en länkad förskjutning eller en klon kan deras "
-"källobjekt / slinga vara svårt att välja eftersom det kan vara direkt under, "
-"eller osynliggjort och / eller låst. Den magiska tangenten <keycombo><keycap "
+"källobjekt/slinga vara svårt att välja eftersom det kan vara direkt under, eller "
+"osynliggjort och/eller låst. Den magiska tangenten <keycombo><keycap "
 "function=\"shift\">Skift</keycap><keycap>D</keycap></keycombo> hjälper dig; "
 "markera texten, den länkade förskjutningen eller klonen och tryck på "
 "<keycombo><keycap function=\"shift\">Skift</keycap><keycap>D</keycap></keycombo> "
@@ -681,7 +681,7 @@ msgstr ""
 "inte går att nå på din skärm. Maximera helt enkelt fönstret (vilket gör att det "
 "syns igen, använd aktivitetsfältet), spara och läs om. Du kan undvika detta helt "
 "och hållet genom att avmarkera det globala alternativet för att spara "
-"fönstergeometri <guimenuitem>(Inkscape-inställningar</guimenuitem>, "
+"fönstergeometri (<guimenuitem>Inkscape-inställningar</guimenuitem>, "
 "<menuchoice><guimenu>Gränssnitt</guimenu><guimenuitem>Fönster</guimenuitem></"
 "menuchoice>-avsnitt)."
 
@@ -732,7 +732,7 @@ msgid ""
 "Most SVG elements can be tweaked to react to user input (usually this will only "
 "work if the SVG is displayed in a web browser)."
 msgstr ""
-"De flesta SVG-element kan justeras för att reagera på användarens inmatning "
+"De flesta SVG-element kan finjusteras för att reagera på användarens inmatning "
 "(vanligtvis fungerar detta bara om SVG visas i en webbläsare)."
 
 #. (itstool) path: sect1/para
@@ -747,8 +747,8 @@ msgstr ""
 "Den enklaste möjligheten är att lägga till en klickbar länk till objekten. För "
 "detta <mousebutton role=\"right-click\">högerklickar</mousebutton> du på "
 "objektet och väljer <menuchoice><guimenuitem>Skapa länk</guimenuitem></"
-"menuchoice> från snabbmenyn. Dialogrutan \"Objektattribut\" öppnas, där du kan "
-"ange målet för länken med hjälp av värdet <guilabel>href.</guilabel>."
+"menuchoice> från snabbmenyn. Dialogrutan \"Objektattribut\" öppnas där du kan "
+"ange målet för länken med hjälp av värdet för <guilabel>href</guilabel>."
 
 #. (itstool) path: sect1/para
 #: tutorial-tips.xml:369
