--- a/Inkscape/Inkscapes nybörjarguide/creating-gradients.po
+++ b/Inkscape/Inkscapes nybörjarguide/creating-gradients.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:13+0200\n"
+"PO-Revision-Date: 2025-07-27 16:00+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -40,8 +40,8 @@ msgid ""
 "within reach, so you can modify the colors easily."
 msgstr ""
 "Med Inkscape kan du enkelt skapa och modifiera gradienter på skärmen. Det är "
-"dock bra att alltid ha dialogrutan :guilabel:`Fill and Stroke` inom räckhåll, "
-"så att du enkelt kan ändra färgerna."
+"dock bra att alltid ha dialogrutan :guilabel:`Fyllning och streck` inom "
+"räckhåll, så att du enkelt kan ändra färgerna."
 
 #: ../../source/creating-gradients.rst:11 d327155ada0b438194cf81c30dba1179
 msgid ""
@@ -49,9 +49,9 @@ msgid ""
 "to an object, you need to first select an object. Then, click-and-drag over "
 "the object with the Gradient tool."
 msgstr ""
-"Verktyget **Gradientverktyg** kan aktiveras i verktygsfältet. Om du vill "
-"använda en gradient på ett objekt måste du först markera objektet. Klicka och "
-"dra sedan över objektet med Gradient-verktyget."
+"Verktyget **Gradient** kan aktiveras i verktygsfältet. Om du vill tillämpa en "
+"gradient på ett objekt måste du först markera objektet. Klicka och dra sedan "
+"över objektet med Gradient-verktyget."
 
 #: ../../source/creating-gradients.rst:15 9597e0f83f44439698c33af5ffb496e7
 msgid ""
@@ -60,7 +60,7 @@ msgid ""
 "beginning of the gradient, and the circle its end."
 msgstr ""
 "Det kommer nu att visas två nya handtag på objektet, ett kvadratiskt och ett "
-"cirkulärt, som är förbundna med en blå linje. Kvadraten symboliserar "
+"cirkulärt, som är anslutna med en blå linje. Kvadraten symboliserar "
 "gradientens början och cirkeln dess slut."
 
 #: ../../source/creating-gradients.rst:19 e53423935c724af09a85c687e04e4048
@@ -99,7 +99,7 @@ msgid ""
 "in the :guilabel:`Fill and Stroke` dialog, select the color you want, or "
 "click on a color in the palette to assign it to the selected gradient stop."
 msgstr ""
-"i dialogrutan :guilabel:`Fill and Stroke`, välj den färg du vill ha eller "
+"i dialogrutan :guilabel:`Fyllning och streck`, välj den färg du vill ha eller "
 "klicka på en färg i paletten för att tilldela den till det valda "
 "gradientstoppet."
 
@@ -126,11 +126,11 @@ msgid ""
 "tool. For this, the button for radial gradients in the tool controls bar must "
 "be selected."
 msgstr ""
-"Du kan omvandla en linjär gradient till en radiell gradient genom att använda "
-"knappen på översta raden |Radial gradient icon| i dialogen :guilabel:`Fill "
-"and Stroke`. Du kan också ersätta den gamla gradienten genom att skapa en ny "
-"med Gradientverktyget. För detta måste knappen för radiella gradienter i "
-"verktygsstyrningsfältet vara markerad."
+"Du kan transformera en linjär gradient till en radiell gradient genom att "
+"använda knappen på översta raden |Radial gradient icon| i "
+"dialogen :guilabel:`Fyllning och streck`. Du kan också ersätta den gamla "
+"gradienten genom att skapa en ny med Gradientverktyget. För detta måste "
+"knappen för radiella gradienter i verktygskontrollfältet vara markerad."
 
 #: ../../source/creating-gradients.rst:86 712112fc7e614b8783de9572034ab156
 msgid "Radial gradient icon"
@@ -143,17 +143,17 @@ msgid ""
 "in the middle, and two circular handles at the end of its arms. The length of "
 "the arms represents the diameter of the radial gradient."
 msgstr ""
-"När ett objekt utsätts för en **radiell gradient** symboliseras gradienten "
-"inte av en rak linje utan av en vinkel som har ett fyrkantigt handtag i "
-"mitten och två cirkulära handtag i slutet av armarna. Längden på armarna "
-"motsvarar diametern på den radiella gradienten."
+"När ett objekt har en **radiell gradient** tillämpad på sig symboliseras "
+"gradienten inte av en rak linje utan av en vinkel som har ett fyrkantigt "
+"handtag i mitten och två cirkulära handtag i slutet av armarna. Längden på "
+"armarna motsvarar diametern på den radiella gradienten."
 
 #: ../../source/creating-gradients.rst:49 eb08bc76467647b0b8232520e35c4359
 msgid ""
 "There can be separate gradients applied to an object's fill and to its stroke."
 msgstr ""
 "Det kan vara separata gradienter som tillämpas på ett objekts fyllning och på "
-"dess stroke."
+"dess streck."
 
 #: ../../source/creating-gradients.rst:51 10b688a4ae2b4e589624a0caf850b0c6
 msgid "Linear gradient"
@@ -170,7 +170,7 @@ msgstr ""
 "En rektangel som har en gradient från gult till transparent. Överst i "
 "verktygskontrollfältet visas att objektet har en linjär gradient med två "
 "stopp, det ena gult och det andra transparent. Varje stopp kan ändras "
-"med :guilabel:`Fill and Stroke`-dialogen, efter att motsvarande stopp har "
+"med :guilabel:`Fyllning och streck`-dialogen, efter att motsvarande stopp har "
 "valts på duken."
 
 #: ../../source/creating-gradients.rst:60 be3acba52c8240dfbcb9dd947a6a25f9
@@ -187,7 +187,7 @@ msgstr "Flytta stopp för en gradient"
 
 #: ../../source/creating-gradients.rst:70 819db9ac212a49e1979fdddd55cfb9ce
 msgid "The position of each stop (color) can be changed directly on the canvas."
-msgstr "Positionen för varje stopp (färg) kan ändras direkt på målarduken."
+msgstr "Positionen för varje stopp (färg) kan ändras direkt på duken."
 
 #: ../../source/creating-gradients.rst:72 03fb441e920647d8993eace468c39243
 msgid "Radial gradient"
@@ -197,7 +197,8 @@ msgstr "Radiell gradient"
 msgid ""
 "A linear gradient can be transformed into a radial gradient and the other way "
 "around."
-msgstr "En linjär gradient kan omvandlas till en radiell gradient och tvärtom."
+msgstr ""
+"En linjär gradient kan transformeras till en radiell gradient och tvärtom."
 
 #: ../../source/creating-gradients.rst:78 ac64efc6c8b14b09b1a93f1816863de4
 msgid "Move radial gradient"
