--- a/Inkscape/Inkscapes nybörjarguide/custom-colors.po
+++ b/Inkscape/Inkscapes nybörjarguide/custom-colors.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:28+0200\n"
+"PO-Revision-Date: 2025-07-27 16:17+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -30,12 +30,12 @@ msgid ""
 "|Fill and Stroke dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
 "+ :kbd:`F` :menuselection:`Object --> Fill and Stroke`"
 msgstr ""
-"|Fill and Stroke dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
-"+ :kbd:`F` :menuselection:`Objekt --> Fyll och streck`"
+"|Fyllning och streck dialog icon| :kbd:`Shift` + :kbd:`Ctrl` "
+"+ :kbd:`F` :menuselection:`Objekt --> Fyllning och streck`"
 
 #: ../../source/custom-colors.rst:91 cd3f762da4d544aa8f06b592580f0297
 msgid "Fill and Stroke dialog icon"
-msgstr "Ikon för dialogrutan Fyll och streck"
+msgstr "Ikon för dialogrutan Fyllning och streck"
 
 #: ../../source/custom-colors.rst:7 91eeb6f7873b49c3a1c29d5abd0f3e0b
 msgid ""
@@ -44,7 +44,7 @@ msgid ""
 "closer look at that dialog."
 msgstr ""
 "Om paletten inte innehåller den färg som du vill använda kan du välja en färg "
-"i dialogen :guilabel:`Fill and Stroke`. Vi ska nu titta närmare på den "
+"i dialogen :guilabel:`Fyllning och streck`. Vi ska nu titta närmare på den "
 "dialogen."
 
 #: ../../source/custom-colors.rst:11 d8d50af9db6d4580bbb24d7894adaa13
@@ -54,7 +54,7 @@ msgid ""
 "style`."
 msgstr ""
 "Längst upp i dialogrutan finns det 3 olika flikar: "
-"för :guilabel:`Fill`, :guilabel:`Stroke paint` och :guilabel:`Stroke style`."
+"för :guilabel:`Fyllning`, :guilabel:`Streckfärg` och :guilabel:`Streckstil`."
 
 #: ../../source/custom-colors.rst:14 da95d69333a1480cabef66dbb06611ea
 msgid ""
@@ -65,12 +65,11 @@ msgid ""
 "Black), :guilabel:`Wheel` (Color wheel) and :guilabel:`CMS` (Color Management "
 "System)."
 msgstr ""
-"I både flikarna :guilabel:`Fill` och :guilabel:`Stroke paint` hittar du 6 "
-"olika färgvalslägen: :guilabel:`RGB` (Red, Green, Blue), :guilabel:`HSL` "
-"(Hue, Saturation, Lightness), :guilabel:`HSV` (Hue, Saturation, "
-"Value), :guilabel:`CMYK` (Cyan, Magenta, Yellow, Key/"
-"Black), :guilabel:`Wheel` (Färghjul) och :guilabel:`CMS` (Color Management "
-"System)."
+"I både flikarna :guilabel:`Fyllning` och :guilabel:`Streckfärg` hittar du 6 "
+"olika färgvalslägen: :guilabel:`RGB` (Röd, Grön, Blå), :guilabel:`HSL` "
+"(Nyans, mättnad, ljushet), :guilabel:`HSV` (Nyans, mättnad, "
+"värde), :guilabel:`CMYK` (Cyan, Magenta, Yellow, Key/Svart), :guilabel:`Hjul` "
+"(Färghjul) och :guilabel:`CMS` (Färghanteringssystem)."
 
 #: ../../source/custom-colors.rst:20 387c0a788a4e4357881770d7c9510914
 msgid ""
@@ -85,8 +84,8 @@ msgstr ""
 "lägen, men det finns olika användningsområden för dem. Många tycker "
 "att :guilabel:`HSL` är den färgväljare som är lättast att använda. "
 "Färgväljaren :guilabel:`CMS` är reserverad för avancerade användningsområden "
-"och är bara meningsfull i kombination med open source desktop publishing-"
-"programmet `Scribus <https://www.scribus.net/>`_ ."
+"och är bara meningsfull i kombination med öppna källkodsprogrammet för "
+"desktop publishing, `Scribus <https://www.scribus.net/>`_ ."
 
 #: ../../source/custom-colors.rst:22 9f0137a72b0f4bad9d8b37a37f78739a
 msgid ""
@@ -178,7 +177,7 @@ msgstr "Gröna berg med grönt streck"
 
 #: ../../source/custom-colors.rst:78 bc989480359d4e45b7e6a259578eba5a
 msgid "And we choose a green stroke."
-msgstr "Och vi väljer en grön stroke."
+msgstr "Och vi väljer ett grönt streck."
 
 #: ../../source/custom-colors.rst:80 db43c619cd3a414197bdd4560cd3a406
 msgid ""
@@ -187,8 +186,8 @@ msgid ""
 "higher the value for alpha, the more opaque your color will be."
 msgstr ""
 "Varje färgväljare har också ett fält med beteckningen :guilabel:`A` längst "
-"ned. \"A\" står för \"Alpha\", som är opacitetsvärdet för den valda färgen. "
-"Ju högre värde för alpha, desto mer ogenomskinlig blir din färg."
+"ned. \"A\" står för \"Alfa\", som är opacitetsvärdet för den valda färgen. Ju "
+"högre värde för alfa, desto mer ogenomskinlig blir din färg."
 
 #: ../../source/custom-colors.rst:82 66c986f4e04440ca8485587c7e04e505
 msgid "Green mountains with partially transparent fill"
@@ -200,7 +199,7 @@ msgid ""
 "rise behind our green mountains. Note that the stroke is still completely "
 "opaque."
 msgstr ""
-"Om vi sänker alfavärdet för fill kan vi se att solen håller på att gå upp "
+"Om vi sänker alfavärdet för fyllning kan vi se att solen håller på att gå upp "
 "bakom våra gröna berg. Observera att strecket fortfarande är helt "
 "ogenomskinligt."
 
@@ -216,6 +215,6 @@ msgstr ""
 "Om du undrar över det lilla fältet med beteckningen :guilabel:`RGBA` i "
 "dialogrutans nedre högra hörn: det är namnet på färgen i :term:`hexadecimal "
 "kod <Hex Color>`, som den används i en webbsidas :term:`CSS <Cascading Style "
-"Sheets>`. De två sista bokstäverna i koden anger :term:`opacity <Alpha>` "
+"Sheets>`. De två sista bokstäverna i koden anger :term:`opacitet <Alfa>` "
 "eller \"alfavärdet\" (precis som skjutreglaget med "
 "beteckningen :guilabel:`A`)."
