--- a/Inkscape/Inkscapes nybörjarguide/free-drawing.po
+++ b/Inkscape/Inkscapes nybörjarguide/free-drawing.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 08:41+0200\n"
+"PO-Revision-Date: 2025-07-27 16:18+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -36,7 +36,7 @@ msgid ""
 "you can always modify the elements in your drawing with the path tools."
 msgstr ""
 "Verktygen för frihandsritning gör det möjligt att rita direkt på "
-"Inkscape-ytan med hjälp av musen eller en pekpenna från en grafikplatta. "
+"Inkscape-ytan med hjälp av musen eller en penna från en ritplatta. "
 "Beroende på vad och hur du vill rita kan du välja det verktyg som passar "
 "bäst för uppgiften. Dessa verktyg är inte baserade på geometriska "
 "former. Du kan rita exakt den form du behöver. Med lite övning kommer du "
