--- a/Inkscape/Inkscapes nybörjarguide/creating-custom-patterns.po
+++ b/Inkscape/Inkscapes nybörjarguide/creating-custom-patterns.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:27+0200\n"
+"PO-Revision-Date: 2025-07-27 14:01+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/creating-custom-patterns.rst:3 bbe0039ee13843deb8cbcaac535aea12
 msgid "Creating Custom Patterns"
-msgstr "Skapa egna mönster"
+msgstr "Skapa anpassade mönster"
 
 #: ../../source/creating-custom-patterns.rst:5 6af74a08cf4848e7b8ec8d68659e8b14
 msgid ""
@@ -44,10 +44,10 @@ msgid ""
 "dialog, next to the stock patterns that come with Inkscape."
 msgstr ""
 "Välj det objekt som du vill använda som mönster och be sedan programmet att "
-"göra om det till ett mönster via :menuselection:`Object --> Pattern --> "
-"Objects to Pattern`. Ditt mönster kommer att visas på duken, applicerat på "
+"göra om det till ett mönster via :menuselection:`Objekt --> Mönster --> "
+"Objekt till mönster`. Ditt mönster kommer att visas på duken, tillämpat på "
 "en rektangel. Det kommer nu också att finnas tillgängligt i "
-"dialogrutan :guilabel:`Fill and Stroke`, bredvid de standardmönster som "
+"dialogrutan :guilabel:`Fyllning och streck`, bredvid de standardmönster som "
 "följer med Inkscape."
 
 #: ../../source/creating-custom-patterns.rst:15
@@ -57,8 +57,8 @@ msgid ""
 "the opposite operation. This is useful when you want to modify a pattern, or "
 "want to extract an object from it."
 msgstr ""
-"Med alternativet :guilabel:`Pattern to Objects` i samma meny kan du göra det "
-"motsatta. Detta är användbart när du vill ändra ett mönster eller vill "
+"Med alternativet :guilabel:`Mönster till objekt` i samma meny kan du göra "
+"det motsatta. Detta är användbart när du vill ändra ett mönster eller vill "
 "extrahera ett objekt från det."
 
 #: ../../source/creating-custom-patterns.rst:19
