--- a/Inkscape/Inkscapes nybörjarguide/credits.po
+++ b/Inkscape/Inkscapes nybörjarguide/credits.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:07+0200\n"
+"PO-Revision-Date: 2025-07-27 16:03+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/credits.rst:3 86d8611708d5467d9b2e1fc3aaf04963
 msgid "Credits"
-msgstr "Upphovspersoner"
+msgstr "Tack till"
 
 #: ../../source/credits.rst:5 2ecad4c209a34e8ebc3eff0ec6e58207
 msgid ""
@@ -32,7 +32,7 @@ msgid ""
 "reference guide for learning Inkscape."
 msgstr ""
 "Den här boken skapades ursprungligen av **Elisa de Castro Guerra**, designer "
-"och `utbildningsinstruktör\" <http://activdesign.eu/>`_. Den skapades som en "
+"och `utbildningsinstruktör <http://activdesign.eu/>`_. Den skapades som en "
 "referensguide för att lära sig Inkscape."
 
 #: ../../source/credits.rst:8 777c336fae14415a8550a97d61f0750a
